src/styles/sidebar.css
/* TODO: check if all style is used with the new interface */
.dndflow {
  flex-wrap: wrap;
  margin-top: 80px;
  padding-left: 5px;
  overflow: scroll;
  height: 90vh;
  scrollbar-width: thin;
}

.dndflow aside {
  border-right: 1px solid #eee;
  font-size: 12px;
  background: #fcfcfc;
}

.dndflow aside .description {
  margin-bottom: 10px;
}

.dndnode {
  margin: 4px;
  height: 80px;
  width: 60px;
  display: inline-grid;
  flex-direction: row;
  justify-content: safe;
  cursor: grab;
}

.selectedTask {
  border: 2px solid #3f51b5;
  border-radius: 10px;
}

.dndnode.input {
  border: 1px solid #0041d0;
  border-radius: 2px;
}

.dndnode.output {
  border: 1px solid #ff0072;
  border-radius: 2px;
}

.reactflow-wrapper {
  flex-grow: 1;
  height: 100%;
  width: 100%;
  background-color: rgb(233, 235, 247);
}

.dndnode.default {
  border: 1px solid #6d65e2;
  border-radius: 2px;
}

.dndnode.graph {
  margin-right: 10px;
  border: 1px solid #1b9439;
  border-radius: 2px;
}

@media screen and (min-width: 768px) {
  .dndflow aside {
    width: 20%;
    max-width: 250px;
  }
}

.MuiTableCell-root {
  padding: 1px;
  width: 98%;
}

.MuiFormControl-marginNormal {
  margin: 0px;
}

